--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@
 /tmp
 *.keep
 /public/*
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
+# Ignore application configuration
+/config/application.yml
