--- a/config/database.yml
+++ b/config/database.yml
@@ -12,21 +12,23 @@
 default: &default
   adapter: mysql2
   encoding: utf8
+  host: <%= ENV["DB_HOST"] %>
   pool: 5
-  username: root
-  password:
-  socket: /var/run/mysqld/mysqld.sock
+  username: <%= ENV["DB_USER_NAME"] %>
+  password: <%= ENV["DB_USER_PASSWORD"] %>
+  port: <%= ENV["DB_PORT"] %>
+  socket: <%= ENV["DB_SOCKET"] %>
 
 development:
   <<: *default
-  database: PotetoRecords_development
+  database: <%= ENV["DB_NAME_DEVELOPMENT"] || "poteto_records_development"  %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: PotetoRecords_test
+  database: <%= ENV["DB_NAME_TEST"] || "poteto_records_test" %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -48,7 +50,12 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: PotetoRecords_production
-  username: PotetoRecords
-  password: <%= ENV['POTETORECORDS_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  encoding: utf-8
+  host: <%= ENV["DB_HOST"] %>
+  pool: 5
+  port: <%= ENV["DB_PORT"] %>
+  database: <%= ENV["DB_NAME_PRODUCTION"] %>
+  username: <%= ENV["DB_USER_NAME"] %>
+  password: <%= ENV['DB_USER_PASSWORD'] %>
+  socket: <%= ENV["DB_SOCKET"] %>
